Vi kan nå hente antall aktiviteter i api'et.
